[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/GameScene.gd" id="1"]

[node name="Game" type="Control"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="TopBar" type="HBoxContainer" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = 16.0
offset_top = 12.0
offset_right = -16.0
offset_bottom = 52.0

[node name="Info" type="Label" parent="TopBar"]
text = "Nível"
size_flags_horizontal = 3

[node name="Timer" type="Label" parent="TopBar"]
text = "00:00"
horizontal_alignment = 2
size_flags_horizontal = 3

[node name="Back" type="Button" parent="TopBar"]
text = "Voltar"

[node name="Board" type="Node2D" parent="."]
position = Vector2(0, 0)

[node name="Overlay" type="ColorRect" parent="."]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.35)

[node name="OverlayLabel" type="Label" parent="Overlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -40.0
offset_right = 200.0
offset_bottom = 40.0
text = "Concluído!"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="TopBar/Back" to="." method="_on_back_pressed"]
